Details
-
Bug
-
Status: Closed
-
P3: Somewhat important
-
Resolution: Done
-
4.7.4
-
None
-
5049cff4969b969a3bec5d14945a07972bdb17bc
Description
file qstatemachine.cpp, line 1443: GoToStateTransition trans = qFindChild<GoToStateTransition>(sourceState);
the function qFindChild should match only the GoToStateTransition type, but it actually matches any QAbstractTransition type due to
the the absence of Q_OBJECT macro in the GoToStateTransition class to contain its complete meta object info;
this crashes the whole statemachine structure (disconnects the other transitions)